--- a/style.css
+++ b/style.css
@@ -1,14 +1,12 @@
-* {
+/* Always set the map height explicitly to define the size of the div
+       * element that contains the map. */
+#map {
+  height: 100%;
+}
+/* Optional: Makes the sample page fill the window. */
+html,
+body {
+  height: 100%;
   margin: 0;
   padding: 0;
-}
-h1 {
-  text-align: center;
-  font-family: Arial, Helvetica, sans-serif;
-}
-#myMap {
-  box-sizing: border-box;
-  width: 100vw;
-  height: 95vh;
-  background-color: grey;
 }
